<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	android:background="@color/background_primary">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageView
			android:src="@drawable/ic_link_eye"
			android:layout_width="48dp"
			android:layout_height="48dp"/>

		<TextView
			android:text="@string/app_name"
			android:textSize="16dp"
			android:fontFamily="monospace"
			android:textColor="@color/foreground_primary"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:paddingLeft="16dp"
			android:gravity="start|center_vertical"/>

	</LinearLayout>

	<TextView
		android:text="@string/main_status_description"
		android:textSize="16dp"
		android:textColor="@color/foreground_primary"
		android:fontFamily="monospace"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"/>

	<TextView
		android:text="@string/main_status_requirement"
		android:textSize="16dp"
		android:textColor="@color/foreground_primary"
		android:fontFamily="monospace"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"/>

	<TextView
		android:text="@string/main_status_current"
		android:textSize="16dp"
		android:textColor="@color/foreground_primary"
		android:fontFamily="monospace"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="36dp"
		android:gravity="center"/>

	<TextView
		android:id="@+id/main_status_status"
		android:text="@string/main_status_disabled"
		android:textColor="@color/foreground_primary"
		android:textSize="32dp"
		android:fontFamily="monospace"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="44dp"
		android:layout_marginTop="16dp"
		android:orientation="horizontal"
		android:weightSum="10">

		<Button
			android:id="@+id/main_status_change"
			android:background="@color/background_secondary"
			android:textColor="@color/foreground_primary"
			android:text="@string/main_status_enable"
			android:textSize="16dp"
			android:fontFamily="monospace"
			android:textAllCaps="false"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="5"/>

		<View
			android:layout_width="1dp"
			android:layout_height="1dp"/>

		<Button
			android:id="@+id/main_status_test"
			android:background="@color/background_secondary"
			android:textColor="@color/foreground_primary"
			android:text="@string/main_status_test"
			android:textSize="16dp"
			android:fontFamily="monospace"
			android:textAllCaps="false"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="5"/>

	</LinearLayout>

</LinearLayout>