<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_primary"
	android:weightSum="10">

	<LinearLayout
		android:id="@+id/main_content"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:orientation="vertical"
		android:layout_weight="9">

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_weight="1"
		android:padding="8dp"
		android:weightSum="9">

		<Button
			android:id="@+id/main_tab_status"
			android:background="@color/background_seconday_not_selected"
			android:textColor="@color/foreground_primary"
			android:text="@string/main_tab_status_str"
			android:textSize="14dp"
			android:fontFamily="monospace"
			android:textAllCaps="false"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="3"/>

		<Button
			android:id="@+id/main_tab_history"
			android:background="@color/background_seconday_not_selected"
			android:textColor="@color/foreground_primary"
			android:text="@string/main_tab_history_str"
			android:textSize="14dp"
			android:fontFamily="monospace"
			android:textAllCaps="false"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="3"/>

		<Button
			android:id="@+id/main_tab_about"
			android:background="@color/background_seconday_not_selected"
			android:textColor="@color/foreground_primary"
			android:text="@string/main_tab_about_str"
			android:textSize="14dp"
			android:fontFamily="monospace"
			android:textAllCaps="false"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="3"/>

	</LinearLayout>

</LinearLayout>